# GServer-v2

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Docker.md  Dockerfile  Dockerfile.v8  JenkinsEnv.json  Jenkinsfile  README.md  build_windows_v8.bat  cpp.hint  entrypoint.sh  my.rc.in  vcpkg.json
Catch_tests/: CMakeLists.txt
Catch_tests/CString/: CString_tests.cpp
Catch_tests/Player/: Player_tests.cpp
Catch_tests/TPlayer/: TPlayer_tests.cpp
Catch_tests/Utilities/: FilePermission_tests.cpp  IdGenerator_tests.cpp
dependencies/bzip2/: CMakeLists.txt
dependencies/zlib/: CMakeLists.txt  trees.c  zutil.h
server/: CMakeLists.txt
server/include/: Account.h  BabyDI.h  CCommon.h  CEncryption.h  CFileQueue.h  CFileSystem.h  CLog.h  CPlugin.h  CPluginManager.h  CScriptEngine.h  CSettings.h  CSocket.h  CString.h  CTimeout.h  CTranslationManager.h  CUPNP.h  FileSystem.h  ICommon.h  IConfig.h  IConfig.h.in  IDebug.h  IEnums.h  IMain.h  IUtil.h  Map.h  NPC.h  Player.h  ScriptClass.h  Server.h  ServerList.h  TAccount.h  TLevel.h  TLevelBaddy.h  TLevelBoardChange.h  TLevelChest.h  TLevelHorse.h  TLevelItem.h  TLevelLink.h  TLevelSign.h  TMap.h  (+14 more)
server/include/Animation/: GameAni.h  TGameAni.h
server/include/Level/: Level.h  LevelBaddy.h  LevelBoardChange.h  LevelChest.h  LevelHorse.h  LevelItem.h  LevelLink.h  LevelSign.h  LevelTiles.h  tiletypes.h
server/include/Misc/: CUPNP.h  CWordFilter.h  UPNP.h  WordFilter.h
server/include/Packet/: PacketBase.h
server/include/Packet/In/: LevelWarp.h
server/include/Scripting/: CScriptEngine.h  GS2ScriptManager.h  ScriptAction.h  ScriptEngine.h  ScriptExecutionContext.h  ScriptFactory.h  ScriptOrigin.h  SourceCode.h
server/include/Scripting/interface/: ScriptArguments.h  ScriptBindings.h  ScriptEnv.h  ScriptFunction.h  ScriptObject.h  ScriptUtils.h
server/include/Scripting/v8/: V8ScriptArguments.h  V8ScriptBindings.h  V8ScriptEnv.h  V8ScriptFunction.h  V8ScriptObject.h  V8ScriptUtils.h  V8ScriptWrappers.h
server/include/TLevel/: LevelChest.h  LevelItem.h  LevelSign.h  TLevel.h  TLevelBaddy.h  TLevelBoardChange.h  TLevelChest.h  TLevelHorse.h  TLevelItem.h  TLevelLink.h  TLevelSign.h  TLevelTiles.h  tiletypes.h
server/include/UpdatePkgs/: PackageManager.h  UpdatePackage.h
server/include/animation/: Character.h  GameAni.h
server/include/level/: Level.h  LevelBaddy.h  LevelBoardChange.h  LevelChest.h  LevelHorse.h  LevelItem.h  LevelLink.h  LevelSign.h  Map.h
server/include/misc/: UPNP.h  WordFilter.h
server/include/network/: IPacketHandler.h
server/include/object/: Character.h  NPC.h  Player.h  PlayerClient.h  PlayerLogin.h  PlayerRC.h
server/include/player/: PlayerProps.h
server/include/script/: ScriptAction.h  ScriptArguments.h  ScriptBindings.h  ScriptEnv.h  ScriptExecutionContext.h  ScriptFactory.h  ScriptFunction.h  ScriptRunError.h  ScriptUtils.h  ScriptWrapped.h  SourceCode.h  V8Macros.h  V8ScriptArguments.h  V8ScriptBindings.h  V8ScriptEnv.h  V8ScriptFunction.h  V8ScriptUtils.h  V8ScriptWrapped.h
server/include/script/interface/: ScriptEnv.h  ScriptObject.h  ScriptUtils.h
server/include/script/v8/: V8ScriptArguments.h  V8ScriptEnv.h  V8ScriptObject.h  V8ScriptUtils.h  V8ScriptWrappers.h
server/include/scripting/: GS2ScriptManager.h  ScriptAction.h  ScriptClass.h  ScriptEngine.h  ScriptExecutionContext.h  ScriptFactory.h  ScriptOrigin.h  SourceCode.h
server/include/scripting/interface/: ScriptArguments.h  ScriptBindings.h  ScriptEnv.h  ScriptFunction.h  (+2 more)
server/include/utilities/: CommandDispatcher.h  FilePermissions.h  IdGenerator.h  ResourceManager.h  StringUtils.h  stringutils.h  timeunits.h
server/src/: Account.cpp  CCommon.cpp  CEncryption.cpp  CFileQueue.cpp  CFileSystem.cpp  CLog.cpp  CMakeLists.txt  CPluginManager.cpp  CScriptEngine.cpp  CSettings.cpp  CSocket.cpp  CString.cpp  CTranslationManager.cpp  CUPNP.cpp  CWordFilter.cpp  FileSystem.cpp  IUtil.cpp  Map.cpp  NPC.cpp  ScriptClass.cpp  Server.cpp  ServerList.cpp  TAccount.cpp  TLevel.cpp  TLevelBaddy.cpp  TLevelBoardChange.cpp  TLevelChest.cpp  TLevelHorse.cpp  TLevelItem.cpp  TLevelLink.cpp  TLevelSign.cpp  TLevel_BACKUP_703996.cpp  TLevel_BASE_703996.cpp  TLevel_LOCAL_703996.cpp  TMap.cpp  TNPC.cpp  TPlayer.cpp  TPlayerLogin.cpp  TPlayerNC.cpp  TPlayerProps.cpp  (+15 more)
server/src/Animation/: GameAni.cpp  TGameAni.cpp
server/src/Level/: Level.cpp  LevelBaddy.cpp  LevelBoardChange.cpp  LevelItem.cpp  LevelLink.cpp  LevelSign.cpp
server/src/Misc/: CUPNP.cpp  CWordFilter.cpp  UPNP.cpp  WordFilter.cpp
server/src/Player/: Player.cpp  PlayerExternalPlayers.cpp  PlayerLogin.cpp  PlayerNC.cpp  PlayerProps.cpp  PlayerRC.cpp  PlayerRequestText.cpp  PlayerScripts.cpp  PlayerUpdatePackages.cpp
server/src/Scripting/: CScriptEngine.cpp  GS2ScriptManager.cpp  ScriptEngine.cpp
server/src/TLevel/: LevelBaddy.cpp  LevelBoardChange.cpp  TLevel.cpp  TLevelBaddy.cpp  TLevelBoardChange.cpp  TLevelItem.cpp  TLevelLink.cpp  TLevelSign.cpp
server/src/TPlayer/: PlayerExternalPlayers.cpp  TPlayer.cpp  TPlayerExternalPlayers.cpp  TPlayerLogin.cpp  TPlayerNC.cpp  TPlayerProps.cpp  TPlayerRC.cpp  TPlayerRequestText.cpp  TPlayerScripts.cpp  TPlayerUpdatePackages.cpp
server/src/UpdatePkgs/: PackageManager.cpp  UpdatePackage.cpp
server/src/animation/: GameAni.cpp
server/src/level/: Level.cpp  LevelBaddy.cpp  LevelBoardChange.cpp  LevelItem.cpp  LevelLink.cpp  LevelSign.cpp  Map.cpp
server/src/misc/: UPNP.cpp  WordFilter.cpp
server/src/object/: NPC.cpp  Weapon.cpp
server/src/player/: Player.cpp  PlayerClient.cpp  PlayerExternalPlayers.cpp  PlayerLogin.cpp  PlayerNC.cpp  PlayerProps.cpp  PlayerRC.cpp  PlayerRequestText.cpp  PlayerScripts.cpp  PlayerUpdatePackages.cpp
server/src/script/: V8EnvironmentImpl.cpp  V8FunctionsImpl.cpp  V8LevelImpl.cpp  V8NPCImpl.cpp  V8PlayerImpl.cpp  V8ScriptEnv.cpp  V8ServerImpl.cpp  V8WeaponImpl.cpp
server/src/scripting/: GS2ScriptManager.cpp  ScriptClass.cpp  ScriptEngine.cpp
server/src/utilities/: FilePermissions.cpp  StringUtils.cpp  stringutils.cpp
(+107 files in other folders)
